# claude-traffic-light

./: .gitignore  MIGRATION_GUIDE.md  README.md  TROUBLESHOOTING.md  UNIFIED_README.md  active_agent.json  config.py  daemon.py  daemon_guard.vbs  daemon_guard_unified.vbs  daemon_task.xml  daemon_unified.py  hooks_traffic_light.json  install_service.py  install_watchdog.bat  pyproject.toml  query  requirements.txt  set_alert_and_defer.py  set_state.py  set_state_unified.py  start_daemon.py  start_daemon_hidden.vbs  start_daemon_unified.py  switch_agent.py  test_all.py  test_unified.py
.cursor/rules/: post-fix-launch-gui.mdc
arduino/traffic_light/: BLE.md  DEBUGGING_EXPERIENCE.md  TUNING.md  traffic_light.ino
config/: README.md  tl_hook_light_gui.json
docs/: BUILD_AND_DISTRIBUTE.md  CODEX_HOOKS_AND_LIGHT_PATHS.md  HOOK_EVENTS_REFERENCE.md  MIGRATION_GUIDE.md  MULTI_SESSION_AND_EFFECT_PRIORITY.md  PACKAGED_APP_AND_DAEMON.md  SERIAL_PORT_TROUBLESHOOTING.md  TROUBLESHOOTING.md  UNIFIED_README.md  V3_LAYOUT_AND_GIT.md  VIBELIGHT_PROTOCOL.md
extras/legacy_windows/: README.md  (+6 more)
packaging/: build_win.ps1  vibelight.spec
reports/: CODE_REVIEW_REPORT.md  E2E_MODIFICATION_PLAN.md  RELEASE_VALIDATION_REPORT.md  e2e_selftest_report.json  release_validation_report.json
tests/: TEST_PLAN.md  conftest.py  release_validation.py  test_all.py  test_ble.py  test_gui_agent_paths.py  test_release_core.py  test_unified.py  test_vibelight_protocol.py
tools/: README.md  e2e_selftest.py  tl_hook_light_gui.py  tl_hook_light_gui.pyw  vibelight_gui.py  vibelight_gui.pyw
(+25 files in other folders)
