[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-traffic-light"
version = "3.0.0"
description = "Hardware traffic light for Claude Code / Codex (ESP32-C3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
claude-tl = "claude_tl.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
