[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-traffic-light"
version = "3.0.0"
description = "Hardware traffic light for Claude Code / Codex (ESP32-C3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
ble = ["bleak>=0.21.0"]
gui = ["pystray>=0.19.5", "Pillow>=10.0.0"]
dev = ["pytest>=7.0"]
all = [
    "bleak>=0.21.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pytest>=7.0",
]

[project.scripts]
claude-tl = "claude_tl.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
